--- a/dmenu_hotkeys/config.cfg
+++ b/dmenu_hotkeys/config.cfg
@@ -8,5 +8,5 @@ end_pattern = %%
 additional_dots = 10
 
 [APP_CONF_PATHS]
-i3 = .config/i3/config
+i3 = .i3/config,.config/i3/config
 openbox = .config/openbox/rc.xml
