--- a/dmenu_hotkeys/config.cfg
+++ b/dmenu_hotkeys/config.cfg
@@ -1,12 +1,13 @@
 [MENU_COMMAND]
-rofi = rofi -dmenu -i -lines 20 -width 35
+rofi = rofi -dmenu -i
 dmenu = dmenu
-
-[OTHERS]
-start_pattern = %%hotkey:
-end_pattern = %%
-additional_dots = 10
 
 [APP_CONF_PATHS]
 i3 = .config/i3/config
 openbox = .config/openbox/rc.xml
+
+[OTHERS]
+start_pattern = %%hotkey:
+end_pattern = %%
+dots = yes
+additional_dots = 10
