Update get_config method, add tests

--- a/dmenu_hotkeys/config.cfg
+++ b/dmenu_hotkeys/config.cfg
@@ -8,5 +8,5 @@ end_pattern = %%
 additional_dots = 10
 
 [APP_CONF_PATHS]
-i3 = .config/i3/config
-openbox = .config/openbox/rc.xml
+i3 = $HOME/.config/i3/config
+openbox = $HOME/.config/openbox/rc.xml
