--- a/tests/fixtures/i3/config
+++ b/tests/fixtures/i3/config
@@ -1,3 +1,4 @@
+# i3 config
 # %%hotkey: Add todoist task %%
 bindsym $mod+q                  exec --no-startup-id dmenu_todoist_add
 # %%hotkey: Kill current app %%
