Add coverage to travis

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, flake8
+envlist = py27, py34, py35, py36, py37, flake8, coverage
 
 [travis]
 python =
@@ -13,6 +13,13 @@ python =
 basepython = python
 deps = flake8
 commands = flake8 dmenu_hotkeys
+
+[testenv:coverage]
+passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+deps = codecov>=1.4.0
+commands =
+    coverage run setup.py test
+    codecov -e TOXENV
 
 [testenv]
 setenv =
