--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ matrix:
     - env: TOXENV=flake8
       python: 3.7
       dist: xenial
+    - env: TOXENV=coverage
+      python: 3.7
+      dist: xenial
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
