Improve config - add set_config method, add dots via cli kwargs

--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,8 @@ commands = flake8 dmenu_hotkeys
 passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 deps = codecov>=1.4.0
 commands =
-    coverage run setup.py test
-    codecov -e TOXENV
+    - coverage run setup.py test
+    - codecov -e TOXENV
 
 [testenv]
 setenv =
