--- a/tests/fixtures/config.cfg
+++ b/tests/fixtures/config.cfg
@@ -9,5 +9,6 @@ dots = false
 additional_dots = 10
 
 [APP_CONF_PATHS]
+bspwm = $DMENU_HOTKEYS_FIXTURES_PATH/sxhkd/sxhkdrc
 i3 = $DMENU_HOTKEYS_FIXTURES_PATH/i3/config
 openbox = $DMENU_HOTKEYS_FIXTURES_PATH/openbox/rc.xml
