--- a/dmenu_hotkeys/config.cfg
+++ b/dmenu_hotkeys/config.cfg
@@ -9,6 +9,7 @@ dots = false
 additional_dots = 10
 
 [APP_CONF_PATHS]
+awesome = $HOME/.config/awesome/rc.lua
 bspwm = $HOME/.config/sxhkd/sxhkdrc
 i3 = $HOME/.config/i3/config
 openbox = $HOME/.config/openbox/rc.xml
